sync-over-async: Sonar/IDE fix round for the streaming return route
Scan findings from the IDE round (extension + demo), all behavior-preserving:

- ReturnRouteCoordinator.drainStream: extract forwardQueuedSegments so the
  forwarding loop returns instead of breaking (S3776 cognitive complexity,
  S135 one-break rule); the drain flag is still held through terminal cleanup
- SyncRuntime.activeStreams(): field-read diagnostic delegate so observers
  never obtain the AutoCloseable coordinator (try-with-resources findings)
- StreamProducer: no volatile object fields (S3077) - plain fields guarded by
  synchronized ensure methods; the chaos RedisClient is now field-held and
  shut down at teardown; per-mode helpers cut handleEvent complexity 19 -> ~5;
  shared postSegment() used by the switch and LlmStreamBridge (resource-chain
  findings); LIVE/POSTED constants (S1192)
- MockAiBackend: same responder reshape as StreamProducer
- Tests: Thread.sleep -> Utility.getInstance().sleep in poll loops (S2925);
  getFirst()/getLast() for index access; rejectedRegistrationDoesNotConsumeASlot
  differentiated from its S4144 twin (double rejection + cap re-assert);
  always-constant parameters inlined (EmbeddedKafka ports, consumer group id,
  poll key); mkdirs() results checked; extractUsage NPE guard in the parsing pin
- docs/guides/build-test-deploy.md: "Pausing in a unit test" - the sanctioned
  Utility.getInstance().sleep(ms) pattern and when to prefer awaiting a signal

Includes the IDE-accepted quick-fixes from the same review pass (javadoc
grammar, redundant instances=1 dropped - the @PreLoad default is 1, and the
single-poster ordering contract note stays).

Extension 77/77, demo 9/9, doc canon + mkdocs strict green.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>